
	  store/t1/t2/+/t1/t3/@@
	
	The benefit of this feature is evident when possible permutations
	increase, like in:

	  store/t1/{/t2/t3/}/{/t4/t5/}@@
	
	where the query without tag groups would require four separate sets:

	  store/t1/t2/t4/+/t1/t2/t5/+/t1/t3/t4/+/t1/t3/t5/@@
	
	Tag groups allow the use of both simple and triple tags. Tag groups
	can _not_ be nested.

0.7:
  - libextractor integration. Tagging plugins have been converted to
    the new API.

  - multiple version of libextractor (0.5.x and >= 0.6.x) are supported.
    The code for 0.6.x still need some testing. The plugins should check
	the values returned by libextractor to avoid meaningless tagging

  - getattr() on relations/tag/... returned succesfully even if tag/
    didn't exist. Fixed.

  - tagsistant_open(), tagsistant_read() and tagsistant_write() now
    reuse the filehandle by saving it in fuse_file_info.fh field.

  - created tagsistant_invalidate_and_set_cache_entries() and used in
    tagsistant_querytree_find_duplicates(), tagsistant_unlink(),
	tagsistant_rmdir() and tagsistant_rename() to properly delete
	cache entries.

  - the plugins save their filter regexp in the repository.ini file
    each in its own section named [mime:mime/type] where mime/type
	is the mime-type processed by the plugin.

  - added a Mutex for the SQLite backend to solve concurrency problems
    related to database locks

  - added deduplication for symlinks; if a link to /some/path exists
    in the repository and a new one is created, the tags of the
	new one are applied to the existing object

  - added a new boolean parameter to tagsistant_querytree_new() to
    explicitly ask for a database connection; where the function
	gets called twice in one operation (rename, symlink, link, ...)
	one call will avoid the database connection creation

  - fixed building with libextractor 1.x (thanks to rkfg for reporting
    and to Ivan Kolmycheck for suggesting the fix).

0.6.1: