@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "492.20140424.000007"
+#define TAGSISTANT_BUILDNUMBER "497.20140506.000047"
